--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,27 @@
-# Dependencies
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# Testing
-/coverage
-
-# Next.js
+# next.js
 /.next/
 /out/
 
-# Production
+# production
 /build
-/dist
 
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Logs
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
+# env files
+.env*
 
-# OS
-.DS_Store
-Thumbs.db
+# vercel
+.vercel
 
-# Debug
-.next/cache
-.next/static/chunks
-.next/static/media
-
-# Local development
-.local
-
-# Build output
-build/
+# typescript
+*.tsbuildinfo
+next-env.d.ts
