--- a/package.json
+++ b/package.json
@@ -1,54 +1,90 @@
 {
-  "name": "service.freetool.online",
-  "version": "1.0.0",
-  "description": "HEIC Converter Backend Service",
-  "main": "server.js",
+  "name": "my-v0-project",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.485.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "archiver": "^7.0.1",
-    "bcrypt": "^5.1.1",
+    "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
-    "bullmq": "^4.13.2",
+    "chart.js": "latest",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.21.2",
-    "formidable": "^3.5.1",
-    "gm": "^1.25.1",
-    "heic-convert": "^2.0.0",
+    "date-fns": "4.1.0",
+    "embla-carousel-react": "8.5.1",
+    "express": "^4.18.2",
     "heic-decode": "^2.0.0",
-    "heic2any": "^0.0.4",
-    "imagemagick": "^0.1.3",
+    "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
-    "libheif-js": "^1.18.2",
+    "lucide-react": "^0.454.0",
     "multer": "^1.4.5-lts.2",
-    "next": "14.0.4",
+    "next": "^15.2.4",
+    "next-themes": "^0.4.4",
+    "path-to-regexp": "^6.2.0",
     "pdfkit": "^0.16.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "redis": "^4.6.11",
-    "sharp": "^0.33.0",
+    "react": "^19",
+    "react-chartjs-2": "latest",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^19",
+    "react-hook-form": "^7.54.1",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "2.15.0",
+    "router": "^2.2.0",
     "socket.io": "^4.8.1",
-    "ts-node": "^10.9.2",
-    "uuid": "^9.0.1"
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
+    "vaul": "^0.9.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/formidable": "^3.4.5",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.10.4",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
-    "@types/uuid": "^9.0.7",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.4",
-    "typescript": "^5.8.2"
+    "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/socket.io": "^3.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
